1. Working signin/signup system 2. Changes in UserController class

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 !.vscode/*.code-snippets
 
 # config.php
-includes/config.php
+app/config.php
+
 # Local History for Visual Studio Code
 .history/
 
